--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "exceljs": "^3.5.0",
+    "file-saver": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
