Fixed styles.css -- pls change the json

--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "VmasProj"
+    }
+  },
+  "defaultProject": "VmasProj",
+  "cli": {
+    "analytics": false
+  }
 }
